# accolades

./: .env.example  .gitignore  README.md  pyproject.toml  queries.yaml  sources.yaml
.github/workflows/: baseline-monitor.yml  daily-monitor.yml
src/merrill_monitor/: __init__.py  app_store.py  brave_search.py  cfpb.py  classifier.py  cli.py  config.py  digest.py  emailer.py  filters.py  fred.py  google_search.py  logging_config.py  models.py  reddit_client.py  storage.py  utils.py
tests/: test_app_store.py  test_brave_search.py  test_cfpb.py  test_classifier.py  test_cli_modes.py  test_filters.py  test_fred.py  test_google_search.py  test_llm_classifier.py  test_storage.py  test_utils.py
